<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Counter">

    <TextView
        android:id="@+id/counter"
        android:layout_width="364dp"
        android:layout_height="482dp"
        android:text="@string/zero"
        android:textAlignment="center"
        android:textSize="200sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305" />

    <Button
        android:id="@+id/btnDecrement"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:backgroundTint="@color/red"
        android:onClick="onClickDecrement"
        android:text="@string/minus"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />

    <Button
        android:id="@+id/btnIncrement"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:backgroundTint="@color/green"
        android:onClick="onClickIncrement"
        android:text="@string/plus"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="140dp"
        android:layout_height="90dp"
        android:backgroundTint="#FFEB3B"
        android:onClick="onClickReset"
        android:text="@string/reset"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />

    <ImageView
        android:id="@+id/infoIcon"
        android:layout_width="74dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/information_icon"
        android:onClick="showInfoPopup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/info_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>